blog-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-deploy
  labels:
    app: blogapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogapp-deploy
  template:
    metadata:
      labels:
        app: blogapp-deploy
      name: blogapp-deploy
    spec:
      containers:
        - name: blogapp-deploy
          image: default-route-openshift-image-registry.apps.ocp.lab.cloudpak.site/labproj04/blog-app:1.1
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blogapp-deploy
  name: blogapp-svc
spec:
  type: ClusterIP
  selector:
    app: blogapp-deploy
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
status:
  loadBalancer: {}
